--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
             <version>1.18.20</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>at.favre.lib</groupId>
+            <artifactId>bcrypt</artifactId>
+            <version>0.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
